Add stable IDs in the at-spi interface
Hello,
As mentioned in #4 (closed) and gtk#1287 , at-spi currently does not provide any stable id that could be used for identifying widgets in a stable manner. Screen reader scripts would need it to be able to reach a widget which is known to provide some information. We would also need this for proper regression testing, so we can check that for instance a well-known shortcut properly switches focus to a well-known widget, independently from the locale, from modifications of the label of the widget, and from modifications in the tree that leads to this widget.
We would just need a new Accessible property, in addition to the name and description properties, which would not be meant to be displayed to the user, but only to identify widgets in a stable manner over application developments. Basically, it'd contain the 'id' field of the .ui
files.
What do at-spi people think about this?
Samuel